# Geometric-modeling-algos

./: .gitignore  CMakeLists.txt  LICENSE  README-Student-Number-Name.md  README.md  cmake-examples.txt
build-opt/: .gitignore
cmake/: FindEigen3.cmake  FindFREEGLUT.cmake  FindGLUI.cmake  minimesh.cmake
inputs/closed/: cow_mc-lr.off
src/minimesh/: _clang-format
src/minimesh/cli/: CMakeLists.txt  main.cpp
src/minimesh/core/: CMakeLists.txt
src/minimesh/core/mohe/: mesh_connectivity.cpp  mesh_connectivity.hpp  mesh_io.cpp  mesh_io.hpp  mesh_modifier.cpp  mesh_modifier.hpp
src/minimesh/core/util/: assert.hpp  bit_vector.hpp  console_colors.hpp  disable_irrelevant_warnings.hpp  enable_irrelevant_warnings.hpp  foldertools.cpp  foldertools.hpp  get_basefilename.cpp  get_basefilename.hpp  macros.hpp  numbers.hpp
src/minimesh/gui/: CMakeLists.txt  main.cpp
src/minimesh/viz/: CMakeLists.txt  mesh_buffer.cpp  mesh_buffer.hpp  mesh_viewer.cpp  mesh_viewer.hpp  opengl_headers.hpp
src/minimesh/viz/util/: glui_slider.cpp  glui_slider.hpp
